tunneling via local proxy exit handler